welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: identifier expected but '(' found.
def (marquer() )
    ^